# RawS-Music

./: .gitignore  LICENSE  NOTICE  README.md  README_EN.md  build.gradle.kts  gradle.properties  hook_usb.js  quick_check.js  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml  baseline-prof.txt
app/src/main/cpp/: CMakeLists.txt  analytic_hrtf_decoder.cpp  analytic_hrtf_decoder.h  android_binaural_spatial_processor.cpp  android_binaural_spatial_processor.h  auto_peak_limiter.cpp  auto_peak_limiter.h  compact_brir_renderer.cpp  compact_brir_renderer.h  dsp_engine.cpp  dynamic_eq_processor.cpp  dynamic_eq_processor.h  experimental_gain.cpp  experimental_gain.h  ffmpeg_bridge.cpp  loudness_balance_processor.cpp  loudness_balance_processor.h  mono_bass_processor.cpp  mono_bass_processor.h  moog_ladder_filter.cpp  moog_ladder_filter.h  native_audio_engine.cpp  pcm_to_dsd_converter.cpp  pcm_to_dsd_converter.h  raw_android_audio_identity.cpp  raw_audio_format_policy.cpp  raw_audio_format_policy.h  raw_audio_safety.cpp  raw_audio_safety.h  raw_fft_analyzer.cpp  raw_fft_analyzer.h  raw_fft_convolver.cpp  raw_fft_convolver.h  raw_fft_convolver_jni.cpp  raw_pcm_pipeline.cpp  raw_pcm_pipeline.h  raw_player_artwork_transition.cpp  raw_uac20_device.cpp  raw_uac20_device.h  raw_uac20_format_matcher.cpp  (+75 more)
app/src/main/cpp/taglib/: config.h  taglib_config.h
app/src/main/kotlin/com/rawsmusic/: AppPageRenderer.kt  MainActivity.kt  MainBackgroundLayers.kt  RawSMusicApp.kt
app/src/main/res/anim/: landscape_player_rotate_exit.xml  settings_enter_from_left.xml  settings_enter_from_right.xml  settings_exit_to_left.xml  settings_exit_to_right.xml
app/src/main/res/color/: switch_thumb_color.xml  switch_track_color.xml
app/src/main/res/drawable/: bg_add_btn.xml  bg_capsule_round.xml  bg_glass_card.xml  bg_import_button.xml  bg_lyric_header_gradient.xml  bg_main_scrim.xml  bg_nav_highlight.xml  bg_nav_indicator.xml  bg_nav_indicator_light.xml  bg_player_scrim.xml  bg_song_action_sheet.xml  bg_song_item.xml  capsule_bg.xml  ic_album_fill.xml  ic_audio_aaudio.xml  ic_audio_hires.xml  ic_audio_opensl.xml  ic_bluetooth_connect.xml  ic_delete_bin_6_fill.xml  ic_edit_box_fill.xml  ic_equalizer_bars.xml  ic_file_edit_fill.xml  ic_file_info_fill.xml  ic_folder_2_fill.xml  ic_info.xml  ic_launcher_background.xml  ic_list_view.xml  ic_log.xml  ic_menu.xml  ic_moon_fill.xml  ic_more.xml  ic_more_2_fill.xml  ic_more_vert.xml  ic_music_2_fill.xml  ic_music_note_dark.xml  ic_notification_favorite_filled.xml  ic_order_play_fill.xml  ic_play_list_add_fill.xml  ic_play_list_fill.xml  ic_repeat.xml  (+21 more)
app/src/main/res/layout/: widget_playback_compact.xml  widget_playback_wide.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  ids.xml  integers.xml  strings.xml  strings_album_art_default.xml  strings_audio_effect_dimensions.xml  strings_eq_workspace_v2.xml  strings_eq_workspace_v3.xml  strings_fft_ir_resources.xml  strings_fft_multichannel.xml  strings_graphic_eq_dropdown.xml  strings_graphic_eq_workspace.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/values-zh/: strings.xml  strings_album_art_default.xml  strings_audio_effect_dimensions.xml  strings_eq_workspace_v2.xml  strings_eq_workspace_v3.xml  strings_fft_ir_resources.xml  strings_fft_multichannel.xml  strings_graphic_eq_dropdown.xml  strings_graphic_eq_workspace.xml
app/src/main/res/xml/: file_paths.xml  playback_widget_compact_info.xml  playback_widget_info.xml  shortcuts.xml  usb_device_filter.xml
backdrop/: build.gradle.kts
core/common/: build.gradle.kts  consumer-rules.pro
core/ui/: build.gradle.kts
core/ui/src/main/res/drawable/: bg_play_page.xml  bg_popup_song.xml  bg_song_item.xml  cb_select_icon.xml  ic_add_circle.xml  ic_add_outline.xml  ic_album.xml  ic_audio_effects_custom.xml  ic_audio_visualizer_lock.xml  ic_audio_visualizer_visibility.xml  ic_back.xml  ic_bar_chart.xml  ic_close.xml  ic_delete.xml  ic_equalizer_bars.xml  ic_equalizer_line.xml  ic_folder_2_fill.xml  ic_folder_open.xml  ic_function_fill.xml  ic_hires_small.xml  ic_home_3_fill.xml  ic_index_top.xml  ic_info.xml  ic_info_green.xml  ic_list_view.xml  ic_menu.xml  ic_metadata_outline.xml  ic_more_2_fill.xml  ic_music_2_fill.xml  ic_music_note.xml  ic_nav_custom_albums.xml  ic_nav_custom_artists.xml  ic_nav_custom_folders.xml  ic_nav_custom_genre.xml  ic_nav_custom_playlists.xml  ic_nav_custom_queue.xml  ic_nav_custom_recent.xml  (+26 more)
docs/: hiby_alignment_plan.md  poweramp-scan-architecture.md  scan-architecture-comparison.md
gradle/: libs.versions.toml
kotlin/com/rawsmusic/: EmbeddedArtworkFetcher.kt  RawSMusicApp.kt
kotlin/com/rawsmusic/ui/about/: AboutFragment.kt
kotlin/com/rawsmusic/ui/albums/: AlbumDetailFragment.kt  AlbumDetailViewModel.kt  AlbumsFragment.kt  AlbumsViewModel.kt
kotlin/com/rawsmusic/ui/analytics/: AnalyticsFragment.kt
kotlin/com/rawsmusic/ui/artists/: ArtistDetailFragment.kt  ArtistDetailViewModel.kt  ArtistsFragment.kt  ArtistsViewModel.kt
kotlin/com/rawsmusic/ui/log/: LogViewerFragment.kt
kotlin/com/rawsmusic/ui/playlist/: PlaylistDetailFragment.kt  PlaylistFragment.kt
kotlin/com/rawsmusic/ui/songs/: ImportMusicDialog.kt  SongsFragment.kt  SongsViewModel.kt
kotlin/com/rawsmusic/ui/stats/: SongStatsFragment.kt
kotlin/com/rawsmusic/ui/webdav/: WebDavFragment.kt
kotlin/com/rawsmusic/ui/widget/: CapsuleProgressSync.kt  CapsuleRootLayout.kt
lyric/bridge/provider/: build.gradle.kts
lyric/model/: build.gradle.kts
lyric/view/: build.gradle.kts
module/data/: build.gradle.kts  consumer-rules.pro
module/data/schemas/com.rawsmusic.module.data.db.MusicDatabase/: 1.json  2.json
module/data/src/main/assets/: litepal.xml
module/player/: build.gradle.kts
module/player/src/main/: AndroidManifest.xml
module/scanner/: build.gradle.kts  consumer-rules.pro
src/main/cpp/: dsp_engine.cpp
tools/: build_ffmpeg.bat  build_ffmpeg.sh
tools/ffmpeg_build/: build.sh  build_linux.sh
(+577 files in other folders)
